--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -5,7 +5,7 @@
  */
 
 body {
-  background: url('https://github.com/wangrar/wangrar/blob/master/images/BG.png?raw=true') no-repeat center center fixed;
+  background: url('https://github.com/wangrar/wangrar/blob/master/images/BG.jpg?raw=true') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
