--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6,
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   line-height: 1.2;
-  color: #222222;
+  color: #fafafa;
 }
 
 body {
