--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -5,13 +5,12 @@
  */
 
 body {
-    background-image: url('ttps://github.com/wangrar/wangrar/blob/master/images/BG.png?raw=true');
-    background-repeat: no-repeat;
-    position: relative;
-    width: 85%;
-    height: 610px;
-    margin-left: auto;
-    margin-right: auto;
+  background: url('https://github.com/wangrar/wangrar/blob/master/images/BG.jpg?raw=true') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+
 }
 
 .bg-dark {
