--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -6,10 +6,9 @@
 
 body {
   background: url('https://github.com/wangrar/wangrar/blob/master/images/BG.jpg?raw=true') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+  background-repeat:no-repeat;
+  background-size:contain;
+  background-position:center;
 
 }
 
