--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6,
   font-weight: 500;
   line-height: 1.2;
   float:left;
-  color: #007bff;
+  color: #fafafa;
 }
 
 body {
