--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -4,26 +4,36 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-the-big-picture/blob/master/LICENSE)
  */
 
+body {
+   background: url("https://github.com/wangrar/wangrar/blob/master/images/BG.jpg?raw=true") no-repeat center center fixed;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+ }
+
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   font-family: 'IBM Plex Sans Condensed', sans-serif;
-  font-weight: 200;
+  font-weight: 600;
   line-height: 1.2;
   float:left;
-  color: #363151;
+  color: #222222;
+  background-color: white;
+  padding: 0.5rem;
 }
 
 body {
+  display: table;
   margin: 0;
   font-family: 'IBM Plex Sans Condensed', sans-serif;
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 600;
   line-height: 1.5;
-  color: #363151;
+  color: #222222;
   text-align: left;
-  background-color: #f0e7de;
 }
 
 .photo {
