--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -10,6 +10,7 @@ body {
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
+   height:auto;
  }
 
 h1, h2, h3, h4, h5, h6,
